fix overflow hidden

--- a/sass/_unittest.scss
+++ b/sass/_unittest.scss
@@ -662,4 +662,13 @@ body {
       }
     }
   }
+  &.postid-51 {
+    .blog-details-wrapper .single-post-item .post-content {
+      p {
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
 }
